--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 *.egg-info
 # Do not track large binary assets
 *\assets
+*.dll
+*.lib
+*.zip
+*.dss
 # Do not track the testing outputs
 tests.log
 # VS Code files
