--- a/environment.yaml
+++ b/environment.yaml
@@ -1,89 +1,17 @@
 name: dss_3_11
 channels:
-  - https://conda.anaconda.org/t/dw-439c3bb1-1836-4018-98a2-d0db1090db4b/dwr-cvm
+  - dwr-cvm
   - defaults
   - cadwr-dms
 dependencies:
-  - black=23.11.0
-  - blas=1.0
-  - bottleneck=1.3.5
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - bzip2=1.0.8
-  - ca-certificates=2023.12.12
-  - click=8.1.7
-  - colorama=0.4.6
-  - contourpy=1.2.0
-  - cycler=0.11.0
-  - et_xmlfile=1.1.0
-  - fonttools=4.25.0
-  - freetype=2.12.1
-  - giflib=5.2.1
-  - icu=73.1
-  - intel-openmp=2023.1.0
-  - isort=5.9.3
-  - jpeg=9e
-  - kiwisolver=1.4.4
-  - krb5=1.20.1
-  - lerc=3.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libclang=14.0.6
-  - libclang13=14.0.6
-  - libdeflate=1.17
-  - libffi=3.4.4
-  - libpng=1.6.39
-  - libpq=12.15
-  - libtiff=4.5.1
-  - libwebp=1.3.2
-  - libwebp-base=1.3.2
-  - lz4-c=1.9.4
   - matplotlib=3.8.0
-  - matplotlib-base=3.8.0
-  - mkl=2023.1.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.8
-  - mkl_random=1.2.4
-  - munkres=1.1.4
-  - mypy_extensions=1.0.0
-  - numexpr=2.8.7
-  - numpy=1.26.2
-  - numpy-base=1.26.2
-  - openjpeg=2.4.0
-  - openpyxl=3.0.10
-  - openssl=3.0.12
-  - packaging=23.1
   - pandas=2.1.4
-  - pathspec=0.10.3
-  - pillow=10.0.1
-  - pip=23.3.1
-  - platformdirs=3.10.0
-  - ply=3.11
   - pyhecdss=1.3.0
-  - pyparsing=3.0.9
-  - pyqt=5.15.10
-  - pyqt5-sip=12.13.0
-  - python=3.11.5
-  - python-dateutil=2.8.2
-  - python-tzdata=2023.3
-  - pytz=2023.3.post1
-  - qt-main=5.15.2
-  - setuptools=68.2.2
-  - sip=6.7.12
-  - six=1.16.0
-  - sqlite=3.41.2
-  - tbb=2021.8.0
-  - tk=8.6.12
-  - tornado=6.3.3
-  - tzdata=2023c
-  - vc=14.2
-  - vs2015_runtime=14.27.29016
-  - wheel=0.41.2
-  - xz=5.4.5
-  - zlib=1.2.13
-  - zstd=1.5.5
-  - pip:
-      - affine==2.4.0
-      - pydsstools==2.3.1
+  - python=3.11
+  - openpyxl=3.0.10
+  - black=23.11.0
+  - isort=5.9.3
+  - pandss=0.4.1
+  - bokeh=3.3.0
+  - ipykernel=6.25.0
 prefix: C:\Users\zroy\AppData\Local\anaconda3\envs\dss_3_11
