--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pandss"
-version = "0.4.2"
+version = "0.5.1"
 dependencies = [
     "pyhecdss",
     "pandas",
 ]
 
 [tool.setuptools]
-packages = ["pandss"]
+include-package-data = true
+
+[tool.setuptools.packages.find]
+include = ["pandss", "pandss.*"]
+namespaces = false
