--- a/test_environment.yaml
+++ b/test_environment.yaml
@@ -3,12 +3,14 @@ channels:
   - dwr-cvm
   - cadwr-dms
   - defaults
+  - conda-forge
 dependencies:
   - black=23.11.0
   - bokeh=3.3.0
   - ipykernel=6.25.0
   - isort=5.9.3
   - matplotlib=3.8.0
+  - seaborn=0.12.2
   - openpyxl=3.0.10
   - pandas=2.1.4
   - pyhecdss=1.3.0
@@ -16,4 +18,6 @@ dependencies:
   - plotly=5.9.0
   - flake8=6.1.0
   - tabulate=0.9.0
+  - pint=0.23
+  - tqdm=4.65.0
 prefix: C:\Users\zroy\AppData\Local\miniconda3\envs\test_pandss
