--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - python=3.11
     - pyhecdss
     - pandas
+    - pint
 
 about:
   home: https://github.com/CentralValleyModeling/pandss
