--- a/test_environment.yaml
+++ b/test_environment.yaml
@@ -12,6 +12,7 @@ dependencies:
   - matplotlib=3.8.0
   - seaborn=0.12.2
   - openpyxl=3.0.10
+  - packaging=23
   - pandas=2.1.4
   - pyhecdss=1.3.0
   - python=3.11
