--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,14 @@ dependencies = [
 
 [tool.setuptools]
 include-package-data = true
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib", 
+    "--strict-markers",
+]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "serial",
+]
+pythonpath = "./src"
