--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ build-backend = "setuptools.build_meta"
 name = "pandss"
 version = "0.7.5"
 dependencies = [
-    "pyhecdss=1.3",
-    "pandas=2",
-    "packaging=23",
-    "tabulate=0.9"
+    "pyhecdss==1.3",
+    "pandas==2",
+    "packaging==23",
+    "tabulate==0.9"
 ]
 
 [tool.setuptools]
