Add stub for examples in documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,8 @@ site_name: "pandss Documentation"
 nav:
   - Home: index.md
   - API Reference: api.md
+  - Examples: 
+    - Getting Started: quickstart.md
 theme: "readthedocs"
 plugins:
 - mkdocstrings:
