--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -22,6 +22,7 @@ jobs:
         shell: bash -l {0}
 
     steps:
+      - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
