--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -32,21 +32,12 @@ jobs:
           activate-environment: build-pandss
           auto-activate-base: false
       
-      - name: conda info
-        run: conda info
 
-      - name: Install conda-build
-        run: conda install -y conda-build
+      - name: Install conda-build and anaconda-client
+        run: conda install -y conda-build anaconda-client
 
-      - name: conda list
-        run: conda list
-
-      - name: Build package
-        run: conda build .
-
-      - name: Upload package to Anaconda
+      - name: Build and  upload package
         if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'windows-latest' }}
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-        run: |
-          anaconda upload /opt/conda/conda-bld/${{ matrix.os == 'ubuntu-latest' && 'linux-64' || 'win-64' }}/pandss.tar.bz2 -u dwr-cvm
+        run: conda build . --user dwr-cvm --no-force-upload
